--- a/pages/home.html
+++ b/pages/home.html
@@ -7,22 +7,28 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+      .home-banner{
+          align-content: center;
+      }
+  </style>
 
 </head>
 <body>
 
   <div class="container">
-
-    <div class="jumbotron">
+      
+    <div class="jumbotron home-banner">
       <h1 class="text-center"><span class="fa fa-fire"></span> Hot Restaurant</h1>
       <hr>
       <h2 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h2>
       <br>
 
       <div class="text-center">
-        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="material-icons">view_module</span> View Tables</button></a>
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="material-icons">credit_card</span> Make Reservation</button></a>
+        <a href="/tables"><button class="waves-effect waves-blue btn purple darken-4"><span class="material-icons">view_module</span> View Tables</button></a>
+        <a href="/reserve"><button class="waves-effect waves-red btn red accent-4"><span class="material-icons">credit_card</span> Make Reservation</button></a>
       </div>
 
     </div>
@@ -35,6 +41,6 @@
 
   </div>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
